# PyTileDB

./: .gitignore  LICENSE  README.md  test_bookdata.py
cpp/: CMakeLists.txt
cpp/build_linux64/: Makefile  premake5.lua  pytiledb.make
cpp/build_win64/: premake5.lua  pytiledb.vcxproj  tiledb.lib
cpp/premake5_build_linux64/: premake5.lua  pytiledb.make
cpp/premake5_build_win64/: pytiledb.sln  pytiledb.vcxproj  tbb.lib
cpp/src/: CMakeLists.txt
cpp/src/tiledb/cxx_api/: array.h  array_schema.h  array_util.cc  array_util.h  arrow_io_impl.h  attribute.h  column.cc  column.h  config.h  context.h  deleter.h  dimension.h  domain.h  filter.h  filter_list.h  group.h  json.hpp  object.h  object_iter.h  query.h  schema_base.h  stats.h  string_util.cc  string_util.h  tiledb.h  tiledb_cxx_array.h  tiledb_cxx_array_util.cc  tiledb_cxx_array_util.h  tiledb_cxx_column.cc  tiledb_cxx_column.h  tiledb_cxx_string_util.cc  tiledb_enum.h  vfs.h
cpp/src/tiledb_pybind/: common_include.h  init_module_common.cpp  init_module_common.h  init_module_pybind.cpp  pybind_array.cpp  pybind_array.h  pybind_array_schema.cpp  pybind_array_schema.h  pybind_array_util.cpp  pybind_array_util.h  pybind_attribute.cpp  pybind_attribute.h  pybind_column.cpp  pybind_column.h  pybind_config.cpp  pybind_config.h  pybind_context.cpp  pybind_context.h  pybind_core_interface.cpp  pybind_core_interface.h  pybind_dimension.cpp  pybind_dimension.h  pybind_domain.cpp  pybind_domain.h  pybind_exception.cpp  pybind_exception.h  pybind_filter.cpp  pybind_filter.h  pybind_filter_list.cpp  pybind_filter_list.h  pybind_group.cpp  pybind_group.h  pybind_object.cpp  pybind_object.h  pybind_object_iter.cpp  pybind_object_iter.h  pybind_query.cpp  pybind_query.h  pybind_stats.cpp  pybind_stats.h  (+60 more)
